--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>libdatachannel media example</title>
+    <title>libdatachannel media exampleeeeeeeeeee</title>
     <style>
         button {
             padding: 8px 16px;
